# notewiseai

./: main.py  pyproject.toml
backend/: .env  db.sqlite3  main.py  test_rag.py
backend/api/: admin.py  models.py  query.py  quiz.py  serializers.py  summary.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_rename_uploaded_at_document_created_at_document_file_and_more.py  0003_chat_document_chat_flashcard_message_notesummary_and_more.py  0004_question_options.py
backend/backend/: settings.py  urls.py
backend/config/: settings.py
backend/qdrant_db/: meta.json
backend/qdrant_db/collection/pdf_chunks/: storage.sqlite
backend/services/: chunking.py  embeddings.py  ollama_client.py  pdf_parser.py  rag_pipeline.py  vector_store.py
backend_fastapi/api/: __init__.py  search.py  upload.py
backend_fastapi/models/: schemas.py
backend_fastapi/services/: chunking.py  ollama_client.py  rag_pipeline.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  page_blobby_backup.tsx
frontend/app/chat/: page.tsx
frontend/app/documents/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: ChatBubble.tsx  ChatWindow.tsx  DocumentList.tsx  FileUpload.tsx  Navbar.tsx
frontend/hooks/: useChat.ts
frontend/types/: api.ts
